--- a/libreria/src/main/resources/application.properties
+++ b/libreria/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+# per visualizzare le query di hibernate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
