--- a/libreria/src/main/resources/application.properties
+++ b/libreria/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 # per visualizzare le query di hibernate
 spring.jpa.show-sql=true
