--- a/libreria/pom.xml
+++ b/libreria/pom.xml
@@ -22,14 +22,32 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+				<exclusions>
+	    <exclusion>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-logging</artifactId>
+	    </exclusion>
+	</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
+				<exclusions>
+	    <exclusion>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-logging</artifactId>
+	    </exclusion>
+	</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+				<exclusions>
+	    <exclusion>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-logging</artifactId>
+	    </exclusion>
+	</exclusions>
 		</dependency>
 
 		<dependency>
@@ -37,6 +55,12 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
+				<exclusions>
+	    <exclusion>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-logging</artifactId>
+	    </exclusion>
+	</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
@@ -58,6 +82,16 @@
 					<artifactId>junit-vintage-engine</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-yaml</artifactId>
+		</dependency>
+		<!-- Add Log4j2 Dependency -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j2</artifactId>
 		</dependency>
 	</dependencies>
 
